objects/acknowltng__CDStatisticArticleTracking__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__ArticleTitle__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__KnowledgeArticleId__c</fullName>
        <label>Knowledge Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Article closed</fullName>
                    <default>true</default>
                    <label>Article closed</label>
                </value>
                <value>
                    <fullName>Article helped</fullName>
                </value>
                <value>
                    <fullName>Article not helped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acknowltng__Visit__c</fullName>
        <label>Visit</label>
        <referenceTo>acknowltng__CDStatisticVisit__c</referenceTo>
        <relationshipLabel>CD Statistic Articles Tracking</relationshipLabel>
        <relationshipName>CDStatisticArticlesTracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CD Statistic Article Tracking</label>
    <listViews>
        <fullName>acknowltng__All</fullName>
        <columns>NAME</columns>
        <columns>acknowltng__ArticleTitle__c</columns>
        <columns>acknowltng__KnowledgeArticleId__c</columns>
        <columns>acknowltng__Outcome__c</columns>
        <columns>acknowltng__Visit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>CD Statistic Article Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CD Statistic Articles Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>